color rework: pulse-highligh tracks with diff colors at prepend event; added track removing stage

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -108,6 +108,7 @@
         <script src="/angular/routes/phone/phone.js"></script>
         <script src="/angular/directives/carousel.js"></script>
         <script src="/angular/directives/instance-editor-form.js"></script>
+        <script src="/angular/directives/intro-app-ui.js"></script>
         <script src="/angular/directives/lazy-src.js"></script>
         <script src="/angular/directives/wrap-if.js"></script>
         <script src="/angular/providers/appGlobals.js"></script>
