--- a/assets/angular/partials/carousel.html
+++ b/assets/angular/partials/carousel.html
@@ -7,66 +7,7 @@
 </ul>
 
 
-<div>
-
-    <div id="display">
-
-        <div id="menubar">
-            <div id="menu-toggle">
-                <svg x="0px" y="0px" preserveAspectRatio="xMinYMin meet" width="100%" height="100%" viewBox="0 0 20 14" enable-background="new 0 0 20 14">
-                    <rect fill="#333437" width="20" height="2"/>
-                    <rect fill="#333437" width="20" height="2" y="6"/>
-                    <rect fill="#333437" width="20" height="2" y="12"/>
-                </svg>
-            </div>
-            <div id="app-name">musicfeed</div>
-        </div>
-
-        <ul id="feed">
-            <li ng-repeat="track in tracks" ng-class="{ new: track.new }">
-                <div class="track-imagery" ng-style="{ 'background-color': track.color }">
-                    <div ng-if="track.play" class="play">
-                        <!-- <svg x="0px" y="0px" preserveAspectRatio="xMinYMin meet" width="100%" height="100%" viewBox="0 0 50 50" enable-background="new 0 0 50 50">
-                            <polygon fill="#FFFFFF" points="0,50 0,0 50,25 "/>
-                        </svg> -->
-                    </div>
-                </div>
-                <div class="track-info">
-                    <div class="avatar"></div>
-                    <div class="lines"></div>
-                    <div class="heart" ng-class="{ loved: track.loved }">
-                        <div class="love" ng-if="track.loved">
-                            <!-- <svg x="0px" y="0px" preserveAspectRatio="xMidYMid meet" width="100%" height="100%" viewBox="0 0 384 384" enable-background="new 0 0 384 384">
-                                <path fill="#FF0038" d="M276.8,19C243,19,212,34.8,192,60.8c-20-26-51-41.8-84.8-41.8C48.1,19,0,67.3,0,126.7
-                                    c0,27.9,10.6,54.4,29.9,74.6L181.1,354l10.9,11l10.9-11l148.3-149.8c21-20.3,32.8-47.9,32.8-77.5C384,67.3,335.9,19,276.8,19
-                                    L276.8,19z"/>
-                            </svg> -->
-                        </div>
-                    </div>
-                </div>
-            </li>
-        </ul>
-
-        <div ng-if="showPlayer" id="mini-player">
-            <div id="player-progress-bar">
-                <div id="play-progress" ng-if="isPlaying"></div>
-            </div>
-            <div id="player-btn"></div>
-            <div id="playing-info"></div>
-        </div>
-
-    </div>
-
-    <div id="lock-button"></div>
-    <div id="mute-button"></div>
-    <div id="up-button"></div>
-    <div id="down-button"></div>
-    <div id="camera"></div>
-    <div id="mic"></div>
-    <div id="receiver"></div>
-    <div id="home-button"></div>
-
-</div>
+<div class="intro-app-ui"></div>
 
 
 <nav>
