nightly: partly integrated full player in stage 2

--- a/assets/angular/partials/intro-app-ui.html
+++ b/assets/angular/partials/intro-app-ui.html
@@ -52,11 +52,14 @@
     </ul>
 
     <div id="player">
+        <div id="track-video"></div>
         <div id="player-progress-bar">
             <div id="play-progress"></div>
         </div>
-        <div id="player-btn"></div>
-        <div id="playing-info"></div>
+        <div id="mini-player-control">
+            <div id="mini-player-btn"></div>
+            <div id="mini-playing-info"></div>
+        </div>
     </div>
 
 </div>
