--- a/assets/angular/partials/intro-app-ui.html
+++ b/assets/angular/partials/intro-app-ui.html
@@ -60,6 +60,12 @@
             <div id="mini-player-btn"></div>
             <div id="mini-playing-info"></div>
         </div>
+        <div id="full-player-playing-info"></div>
+        <div id="full-player-control">
+            <div id="full-player-prev"></div>
+            <div id="full-player-btn"></div>
+            <div id="full-player-next"></div>
+        </div>
     </div>
 
 </div>
