--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -37,4 +37,6 @@
 @import (reference) 'custom-mixins.less'; // contains bootsrap overrides & custom variables/mixins
 // @import 'reset.less';
 @import 'custom-common.less';
+@import 'carousel.less';
 @import 'custom.less';
+@import 'keyframes.less';
