added intro player video (the blurry red loop); changed copy of first stage

--- a/assets/angular/partials/intro-app-ui.html
+++ b/assets/angular/partials/intro-app-ui.html
@@ -52,7 +52,13 @@
     </ul>
 
     <div id="player">
-        <div id="track-video"></div>
+        <div id="track-video">
+            <div>
+                <video autoplay loop muted>
+                    <source src="/videos/intro-player-video.mp4" />
+                </video>
+            </div>
+        </div>
         <div id="player-progress-bar">
             <div id="play-progress"></div>
         </div>
