--- a/assets/styles/keyframes.less
+++ b/assets/styles/keyframes.less
@@ -443,6 +443,23 @@
     100%{ height: 0; }
 }
 
+@-webkit-keyframes minimizePlayer {
+    0%  { height: @fullPlayerHeight; }
+    100%{ height: @miniPlayerHeight; }
+}
+@-moz-keyframes minimizePlayer {
+    0%  { height: @fullPlayerHeight; }
+    100%{ height: @miniPlayerHeight; }
+}
+@-o-keyframes minimizePlayer {
+    0%  { height: @fullPlayerHeight; }
+    100%{ height: @miniPlayerHeight; }
+}
+@keyframes minimizePlayer {
+    0%  { height: @fullPlayerHeight; }
+    100%{ height: @miniPlayerHeight; }
+}
+
 @-webkit-keyframes showMiniPlayerControl {
     0%  { -webkit-transform: translateY( -100% ); opacity: 0; }
     100%{ -webkit-transform: translateY( 0% ); opacity: 1; }
@@ -477,21 +494,38 @@
     100%{ transform: translateY( -100% ); opacity: 0; }
 }
 
-@-webkit-keyframes minimizePlayer {
-    0%  { height: @fullPlayerHeight; }
-    100%{ height: @miniPlayerHeight; }
+@-webkit-keyframes showFullPlayerControl {
+    0%  { -webkit-transform: translateY( 100px * @introScale ); opacity: 0; }
+    100%{ -webkit-transform: translateY( 0px ); opacity: 1; }
 }
-@-moz-keyframes minimizePlayer {
-    0%  { height: @fullPlayerHeight; }
-    100%{ height: @miniPlayerHeight; }
+@-moz-keyframes showFullPlayerControl {
+    0%  { -moz-transform: translateY( 100px * @introScale ); opacity: 0; }
+    100%{ -moz-transform: translateY( 0px ); opacity: 1; }
 }
-@-o-keyframes minimizePlayer {
-    0%  { height: @fullPlayerHeight; }
-    100%{ height: @miniPlayerHeight; }
+@-o-keyframes showFullPlayerControl {
+    0%  { -o-transform: translateY( 100px * @introScale ); opacity: 0; }
+    100%{ -o-transform: translateY( 0px ); opacity: 1; }
 }
-@keyframes minimizePlayer {
-    0%  { height: @fullPlayerHeight; }
-    100%{ height: @miniPlayerHeight; }
+@keyframes showFullPlayerControl {
+    0%  { transform: translateY( 100px * @introScale ); opacity: 0; }
+    100%{ transform: translateY( 0px ); opacity: 1; }
+}
+
+@-webkit-keyframes hideFullPlayerControl {
+    0%  { -webkit-transform: translateY( 0px ); opacity: 1; }
+    100%{ -webkit-transform: translateY( 100px * @introScale ); opacity: 0; }
+}
+@-moz-keyframes hideFullPlayerControl {
+    0%  { -moz-transform: translateY( 0px ); opacity: 1; }
+    100%{ -moz-transform: translateY( 100px * @introScale ); opacity: 0; }
+}
+@-o-keyframes hideFullPlayerControl {
+    0%  { -o-transform: translateY( 0px ); opacity: 1; }
+    100%{ -o-transform: translateY( 100px * @introScale ); opacity: 0; }
+}
+@keyframes hideFullPlayerControl {
+    0%  { transform: translateY( 0px ); opacity: 1; }
+    100%{ transform: translateY( 100px * @introScale ); opacity: 0; }
 }
 
 @-webkit-keyframes playProgress {
