--- a/assets/styles/custom-mixins.less
+++ b/assets/styles/custom-mixins.less
@@ -122,7 +122,8 @@
 //  app intro specific vars
 //
 @introScale: .5;
-@tapScale: 2.5;
+@heartTapScale: 5;
+@tapScale: 3;
 @playTapScale: 2;
 @introAppDisplayWidth: 300px * @introScale;
 @introAppDisplayHeight: 526px * @introScale;
