refactored some code

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -38,5 +38,6 @@
 // @import 'reset.less';
 @import 'custom-common.less';
 @import 'carousel.less';
+@import (reference) 'intro-app-ui.less';
 @import 'custom.less';
 @import 'keyframes.less';
