--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="description" content="">
+        <link rel="icon" type="image/png" href="favicon.png" />
 
         
         <!--  
